--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'net.datafaker:datafaker:2.3.1'
     implementation 'com.aventrix.jnanoid:jnanoid:2.0.0'
 
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
