add movie controller/service unit test

--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
+tasks.named('test') {
+    useJUnitPlatform()
+}
 
 bootRun {
     String activeProfile = System.properties['spring.profiles.active']
