--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,5 +1,6 @@
 spring.application.name=hobby-log
 spring.security.user.password=something
+spring.security.cors.origin=http://localhost:3000
 
 spring.config.activate.on-profile=default | prod
 
