--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,6 +1,6 @@
 spring.application.name=hobby-log
 spring.security.user.password=something
-spring.security.cors.origin=http://localhost:3000
+spring.security.cors.origin=http://localhost:3000,http://localhost:8081
 
 spring.config.activate.on-profile=default | prod
 
